@@ -1,14 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX trivdm-0_p20120321 2538 RMD160 78335c20844ac5ff8e351a72a37356d5bfd99b3a SHA1 10dbbedd2bf58e0ab06cf7f7fedfc38dcfe53e33 SHA256 64a4639913c9370e3f6fb28e244118da272b1382d3ad592d6fe9c8458c531abc
+AUX trivdm-0_p20120423 2563 RMD160 c1189819a3855b7018c1b075036cc359de13631b SHA1 aea9affda4a0c33c72877733545c36b7907e2c32 SHA256 30be20dd063c4dac69c40d7c52c2e1b8b15c83cab601570086b97d657d5a97ca
 EBUILD trivdm-0_p20120321.ebuild 1716 RMD160 49eebd9c396245e593c826a5b113f13e1ac23eae SHA1 96009deaa3d5cb184a40cc8ca0ef78e8d2fb852c SHA256 f3a860912c37d5d51520c0aa725dac6a993631992be535c268c51b20c7b753c4
-MISC ChangeLog 1008 RMD160 2d1950fb8d96b8a9e6ae581f5c406e60c2ccb0b4 SHA1 04e9a8ef87908ea7397333bede0136a06ea192dc SHA256 d163bb1a825a656efdb37d5e6b89a37b24ba5e66b8dc804376affbd8f533716a
+EBUILD trivdm-0_p20120423.ebuild 1716 RMD160 49eebd9c396245e593c826a5b113f13e1ac23eae SHA1 96009deaa3d5cb184a40cc8ca0ef78e8d2fb852c SHA256 f3a860912c37d5d51520c0aa725dac6a993631992be535c268c51b20c7b753c4
+MISC ChangeLog 1176 RMD160 5154521635b8e442a78dd50cf63a716d8a240c0e SHA1 d75d8994c21b4ef6a47982dd9b4e730bef0a1378 SHA256 affedf1f45f2d68369ca210fad9f263a9b939525501c006700cb4b6fb55736b0
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk+VEswACgkQknrdDGLu8JCktgD/eZxOrmWZgMTLMLMtMN5JwRYP
+/GTZv2kMljzQkZr0iKoA/1TxV5DsYfhCrIa11bgfqlRXy9zRAf6nu3XgmVyEcg6h
+=HRWF
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9qMskACgkQknrdDGLu8JAuvgEAmyUqT3+fCKwJyKh4xzmNkuln
-UIQm3r1cCklTEU6Qh1cA/jAfVdg5agKe0Z/lc661IKE3zsd4fnHmpOOJA5FWrcr8
-=lYKQ
+iF4EAREIAAYFAk+VEvAACgkQknrdDGLu8JBDhgD9EAvAT5W7/uIAKsw8TctOsoQ2
+bFcd99q4jEOCbqXPWckA/jCeTNPvZD3xdNeSwzoL4yedIiJzHPDkjMXnphnHZxMK
+=n6M2
 -----END PGP SIGNATURE-----
