@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*trivdm-0_p20120423 (23 Apr 2012)
+
+  23 Apr 2012; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20120423,
+  +trivdm-0_p20120423.ebuild:
+  Version bump w/ uname -srp
+
 *trivdm-0_p20120321 (21 Mar 2012)
 
   21 Mar 2012; Michael Weber <xmw@gentoo.org> -files/trivdm-0_p20110921,
